# CodeReady

./: README.md  index.html  package-lock.json  package.json
docs/: index.html
src/: App.tsx  catalog.ts  planner.test.ts  planner.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
