[package]
name = "codeready"
version = "0.1.0"
description = "Windows AI CLI setup wizard"
authors = ["CodeReady contributors"]
edition = "2021"

[lib]
name = "codeready_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.3", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
